[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drlplugs"
version = "1.2.0"
description = "An out-of-box toolbox that integrates helpers for RL."
authors = [
    {name = "Yi-Chen Li", email = "ychenli.x@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "loguru",
    "python-dotenv",
    "tensorboard",
    "tensorboardX",
    "wandb",
    "paramiko",
    "tqdm",
    "pandas",
    "seaborn",
    "matplotlib",
    "numpy",
    "h5py",
    "gymnasium[all]"
]

[project.optional-dependencies]
torch = [
    "torch"
]

tensorflow = [
    "tensorflow"
]

jax = [
    "jax[cuda12]"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["drlplugs*"]
namespaces = false