[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exputils"
version = "1.2.0"
description = "An out-of-box toolbox that integrates helpers for RL."
authors = [
    {name = "Yi-Chen Li", email = "ychenli.x@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "loguru",
    "tensorboard",
    "tensorboardX",
    "paramiko",
    "tqdm",
    "pandas",
    "seaborn",
    "matplotlib",
    "numpy",
    "h5py",
    "gymnasium[all]"
]

[project.optional-dependencies]
torch = [
    "torch"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["exputils*"]
namespaces = false